--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
   <property name="version-minor"   value="5"/>
   <property name="version-status"  value="-RC"/>
   <property name="version"
-	    value="${version-major}.${version-minor}${version-status}"/>
+            value="${version-major}.${version-minor}${version-status}"/>
   
   <target name="main" depends="jar"/>
   
@@ -40,6 +40,7 @@
        path id="path.java.source"
        fileset dir="." id="fileset.src"
        So maybe change to one src-directory after all
+       TS_* for test suites
   -->
 
   <property name="dist.name"              value="${Name}-${version}"/>
@@ -50,8 +51,10 @@
   <property name="dist.dir"               value="${dist.root}/${dist.name}"/>
 
   <!-- Artifacts -->
+  <!-- Align name with ivy.xml publications section -->
   <property name="jarfile"                value="${name}-${version}.jar"/>
-  <property name="src.zipfile"            value="${name}-src-${version}.zip"/>
+  <property name="src.zipfile"            value="${name}-src-${version}.zip"/>               <!-- Not Maven name ?-->
+  <property name="javadoc.zipfile"        value="${name}-javadoc-${version}.zip"/>          <!-- Not Maven name ?-->
   <property name="pomfile"                value="${name}-${version}.pom"/>
 
   <!-- Places -->
@@ -59,10 +62,13 @@
   <property name="src.test.dir"           value="src-test"/>
   <property name="src.lib.dir"            value="src-lib"/>
   <property name="src.lib.test.dir"       value="src-lib-test"/>
+  <property name="src.examples.dir"       value="src-examples"/>
   <property name="src.dev.dir"            value="src-dev"/>
-  <property name="doc.dir"                        value="doc"/>
+  
+  <property name="doc.dir"                value="doc"/>
   <property name="javadoc.dir"            value="${doc.dir}/javadoc"/>
   <property name="javadoc.all.dir"        value="${doc.dir}/javadoc-all"/>
+  <property name="javadoc.title"          value="${Name}"/>
   <property name="lib.dir"                value="lib"/>
   <!-- Testing - scripts and data files -->
   <property name="test.dir"               value="testing"/>
@@ -97,14 +103,23 @@
   </path>
 
   <!-- Sources as a path -->
-  <path id="java.source.path">
-    <pathelement path="${src.dir}"/>
+  
+  <path id="java.source.path.test">
     <pathelement path="${src.test.dir}"/>
-    <pathelement path="${src.lib.dir}"/>
     <pathelement path="${src.lib.test.dir}"/>
+  </path>    
+
+  <path id="java.source.path.main">
+    <pathelement path="${src.dir}"/>
+    <pathelement path="${src.lib.dir}"/>
+  </path>    
+  
+  <path id="java.source.path">
+    <path refid="java.source.path.main"/>
+    <path refid="java.source.path.test"/>
   </path>
 
-  <!-- Sources as fileset (how do I avoid the duplication here?) -->
+  <!-- Sources as fileset (how do I avoid the duplication here?) Only used in zip -->
   <fileset dir="." id="fileset.src">
     <include name="${src.dir}/**/*.java"/>
     <include name="${src.test.dir}**/*.java"/>
@@ -114,7 +129,7 @@
   
   <target name="javac-flags">
     <!-- Note that in ant, if these flags are already set 
-	 setting them again has no effect -->
+         setting them again has no effect -->
     <property name="java.debug"       value="true"/>
     <property name="java.debuglevel"  value="source,lines,vars"/>
     <property name="java.deprecation" value="true"/>
@@ -127,25 +142,19 @@
   <!-- ========================================== -->
   <!-- ==== Sources -->
   
-  <target name="zip-src">
-    <zip zipfile="${build.dir}/${src.zipfile}">
-      <fileset refid="fileset.src"/>
-    </zip>
-  </target>
-
   <!-- ========================================== -->
   <!-- ==== Build and compile -->
 
   <target name="compile" depends="javac-flags" description="Compile project">
     <mkdir dir="${build.classes.dir}"/>
     <javac destdir="${build.classes.dir}"
-	   debug="${java.debug}"
-	   deprecation="${java.debuglevel}"
-	   optimize="${java.optimize}"
-	   encoding="${java.encoding}"
-	   source="${java.source}"
-	   target="${java.target}"
-	   >
+           debug="${java.debug}"
+           deprecation="${java.debuglevel}"
+           optimize="${java.optimize}"
+           encoding="${java.encoding}"
+           source="${java.source}"
+           target="${java.target}"
+           >
       <src refid="java.source.path"/>
       <classpath refid="java.build.class.path" />
     </javac>
@@ -156,69 +165,57 @@
     <delete file="${build.dir}/${jarfile}"/>
     <jar destfile="${build.dir}/${jarfile}" basedir="${build.classes.dir}">
       <!--
-	<manifest>
-	<attribute name="Main-Class" value="${main.class}"/>
-	</manifest>
+        <manifest>
+        <attribute name="Main-Class" value="${main.class}"/>
+        </manifest>
       -->
     </jar>
   </target>
   
   <!-- ========================================== -->
   <!-- ==== Javadoc -->
+  <!-- To build? -->
 
-  <target name="javadoc-init">
+  <target name="javadoc" depends="javac-flags"
+          description="Make the javadoc">
     <delete  dir="${javadoc.dir}"/>
     <mkdir  dir="${javadoc.dir}"/>
+    <javadoc destdir="${javadoc.dir}"
+             author="true"
+             sourcepathref="java.source.path.main"
+             source="${java.source}"
+             version="true"
+             windowtitle="${Name}-${version} Javadoc"
+             doctitle="${javadoc.title}"
+             Public="true"
+             Use="true"
+             bottom="Copyright &#169; 2007, 2008 Hewlett-Packard Development Company, LP"
+             additionalparam="-breakiterator">
+      <classpath refid="java.build.class.path"/>
+      <package name="com.hp.hpl.jena.tdb"/>
+    </javadoc>
+  </target>
+
+  <target name="javadoc-all" depends="javac-flags"
+          description="Make the javadoc">
     <delete dir="${javadoc.all.dir}"/>
     <mkdir  dir="${javadoc.all.dir}"/>
+    <javadoc destdir="${javadoc.all.dir}"
+             author="true"
+             sourcepathref="java.source.path.main"
+             source="${java.source}"
+             version="true"
+             windowtitle="${Name}-${version} Javadoc"
+             doctitle="${javadoc.title}"
+             Public="true"
+             Use="true"
+             bottom="Copyright &#169; 2007, 2008 Hewlett-Packard Development Company, LP"
+             additionalparam="-breakiterator">
+      <classpath refid="java.build.class.path"/>
+      <package name="com.hp.hpl.jena.tdb.*"/>
+    </javadoc>
   </target>
   
-  <target name="javadoc" depends="javadoc-init"/>
-  <target name="javadoc-all" depends="javadoc-init"/>
-  
-  <!-- To be sorted out
-       <target name="javadoc" depends="clean-javadoc,build-src,javac-flags"
-       description="Make the javadoc">
-       <javadoc
-       sourcepath="${src.build.dir}" << Remove
-       source="${java.source}"
-       destdir="${javadoc.dir}"
-       author="true"
-       version="true"
-       classpathref="classpath"
-       windowtitle="${Name}"
-       doctitle="${Name}"
-       Public="true"
-       Use="true"
-       bottom="Copyright &#169; 2007, 2008 Hewlett-Packard Development Company, LP"
-       additionalparam="-breakiterator">
-       <classpath refid="classpath"/>
-       <package name="com.hp.hpl.jena.tdb"/>
-       <packageset or <fileset ...  
-       
-       </javadoc>
-       </target>
-
-       <target name="javadoc-all" depends="clean-javadoc,build-src,javac-flags"
-       description="Make the javadoc (all of it)">
-       <javadoc
-       packagenames="com.hp.hpl.jena.tdb.*"
-       sourcepath="${src.build.dir}"
-       source="${java.source}"
-       destdir="${javadoc.all.dir}"
-       author="true"
-       version="true"
-       classpathref="classpath"
-       windowtitle="${Name} Query Processor"
-       doctitle="${Name} Query Processor"
-       Public="true"
-       Use="true"
-       bottom="Copyright &#169; 2007, 2008 Hewlett-Packard Development Company, LP"
-       additionalparam="-breakiterator">
-       </javadoc>
-       </target>
-  -->
-
   <!-- ========================================== -->
   <!-- ==== Artifacts -->       
   
@@ -232,28 +229,36 @@
     <copy todir="${artifacts.dir}" file="${build.dir}/${jarfile}"/>
   </target>
   
-  <target name="src-artifact" depends="zip-src">
+  <target name="src-artifact" depends="">
     <!-- <delete file="${artifacts.dir}/${src.zipfile}"/> -->
-    <copy todir="${artifacts.dir}" file="${build.dir}/${src.zipfile}"/>
+    <zip zipfile="${artifacts.dir}/${src.zipfile}">
+        <fileset refid="fileset.src"/>
+    </zip>
+    <!-- OLD   <copy todir="${artifacts.dir}" file="${build.dir}/${src.zipfile}"/> -->
   </target>
 
   <target name="pom-artifact">
     <!-- <delete file="${artifacts.dir}/${pomfile}"/> -->
     <copy file="tdb.pom" tofile="${artifacts.dir}/${pomfile}">
       <filterset>
-	<filter token="VERSION" value="${version}"/>
+        <filter token="VERSION" value="${version}"/>
       </filterset>
     </copy>
   </target>
   
+  <target name="javadoc-artifact" depends="javadoc">
+    <!-- <delete file="${artifacts.dir}/${src.zipfile}"/> -->
+    <zip zipfile="${artifacts.dir}/${javadoc.zipfile}" 
+         basedir="${javadoc.dir}"/>
+  </target>
   
   <!-- ========================================== -->
   <!-- ==== Publication -->
 
-  <target name="artifacts" depends="clean,jar,jar-artifact,src-artifact,pom-artifact"/>
+  <target name="artifacts" depends="clean,jar,jar-artifact,src-artifact,pom-artifact,javadoc-artifact"/>
   
   <target name="publish" description="Build and publish this version"
-	  depends="clean,artifacts,ivy-publish">
+          depends="clean,artifacts,ivy-publish">
   </target>
   
   <!-- ========================================== -->
@@ -267,7 +272,7 @@
     <fail message="JUnit tests failed" if="junit.failed"/>
   </target>
 
-  <!-- Worker tasks for the above tasks -->
+  <!-- Worker task for the above tasks -->
 
   <target name="run-junit" depends="jar,clean-reports">
     <mkdir dir="${reports.dir}"/>
@@ -280,17 +285,17 @@
       <!-- <formatter usefile="false" type="brief"/> -->
       <formatter type="xml" />
       <classpath>
-	<pathelement path="${build.classes.dir}" />
-	<path refid="java.run.class.path" />
+        <pathelement path="${build.classes.dir}" />
+        <path refid="java.run.class.path" />
       </classpath>
       <!-- <test name="test.TS_Main" outfile="${reports.dir.xml}/junit-report"/> -->
       <batchtest todir="${reports.dir.xml}">
-	<fileset dir="${src.test.dir}">
-	  <include name="**/TS_*.java" />
-	</fileset>
-	<fileset dir="${src.lib.test.dir}">
-	  <include name="**/TS_*.java" />
-	</fileset>
+        <fileset dir="${src.test.dir}">
+          <include name="**/TS_*.java" />
+        </fileset>
+        <fileset dir="${src.lib.test.dir}">
+          <include name="**/TS_*.java" />
+        </fileset>
       </batchtest>
     </junit>
   </target>
@@ -298,7 +303,7 @@
   <target name="run-report" depends="run-junit">
     <junitreport todir="./${reports.dir}">
       <fileset dir="./${reports.dir.xml}">
-	<include name="**.xml"/>
+        <include name="**.xml"/>
       </fileset>
       <report format="frames" todir="./${reports.outdir}"/>
     </junitreport>
@@ -314,10 +319,10 @@
   <!-- ==== Release -->
 
   <target name="release" depends="clean,artifacts,package"
-	  description="Create TDB release">
+          description="Create TDB release">
   </target>
 
-  <target name="package" depends="copy-init,copy,zip.release"/>
+  <target name="package" depends="copy-init,copy,zip-release"/>
 
   <target name="copy-init">
     <delete dir="${dist.dir}" />
@@ -355,18 +360,19 @@
     <copy todir="${dist.dir}/" file="README.txt"/>
     <copy todir="${dist.dir}/" file="ChangeLog.txt"/>
 
+    <!-- Documentation (not the wiki) -->
     <copy todir="${dist.dir}/${doc.dir}">
       <fileset dir="${doc.dir}">
-	<include name="**" />
-	<exclude name="**/_vti*/**" />
-	<exclude name="**/_private/**" />
-	<exclude name="**/javadoc-all/**"/>
-	<exclude name="**/desktop.ini" />
+        <include name="**" />
+        <exclude name="**/_vti*/**" />
+        <exclude name="**/_private/**" />
+        <exclude name="**/javadoc-all/**"/>
+        <exclude name="**/desktop.ini" />
       </fileset>
     </copy>
   </target>
 
-  <target name="zip.release">
+  <target name="zip-release">
     <!-- Build the zip of the distribution -->
     <delete file="${dist.root}/${release.zipfile}"/>
     <zip zipfile="${dist.root}/${release.zipfile}">
@@ -390,7 +396,7 @@
   </target>
   
   <target name="ivy-setup-lib" depends="ivy-init,ivy-resolve-report" 
-	  description="Resolve and fetch dependences with Ivy">
+          description="Resolve and fetch dependences with Ivy">
     <ivy:retrieve conf="dev" pattern="lib2/[artifact]-[revision].[ext]" />
     <ivy:cachepath pathid="ivy.dev.classpath" conf="dev" />
   </target>
@@ -399,7 +405,7 @@
 
   <target name="ivy-resolve-report" depends="ivy-init">
     <ivy:resolve conf="dev"
-		 haltonfailure="false" failureproperty="ivy.resolve.failed"/>
+                 haltonfailure="false" failureproperty="ivy.resolve.failed"/>
     <ivy:report todir="${reports.dir}"/>
     <fail message="Ivy dependency failed" if="ivy.resolve.failed"/>
   </target>
@@ -407,9 +413,9 @@
   <target name="ivy-publish" depends="ivy-init">
     <ivy:resolve conf="main"/>
     <ivy:publish conf="main" 
-		 resolver="dev-publish" 
-		 overwrite="true"
-		 forcedeliver="true">
+                 resolver="dev-publish" 
+                 overwrite="true"
+                 forcedeliver="true">
       <artifacts pattern="${artifacts.dir}/[artifact]-[revision].[ext]" />
     </ivy:publish>
   </target>
@@ -417,10 +423,10 @@
   <target name="ivy-pom" depends="ivy-init">
     <!-- Make a basic POM file -->
     <ivy:makepom ivyfile="ivy.xml" 
-		 pomfile="pom-tdb-auto.xml">
+                 pomfile="pom-tdb-auto.xml">
       <!--
-	<mapping conf="default" scope="compile"/>
-	<mapping conf="runtime" scope="runtime"/>
+        <mapping conf="default" scope="compile"/>
+        <mapping conf="runtime" scope="runtime"/>
       -->
     </ivy:makepom>
   </target>
@@ -436,8 +442,8 @@
       <arg value="10"/>
       <arg value="100"/>
       <classpath>
-	<pathelement path="${build.classes.dir}"/>
-	<path refid="java.run.class.path"/>
+        <pathelement path="${build.classes.dir}"/>
+        <path refid="java.run.class.path"/>
       </classpath>
     </java>
   </target>
@@ -447,7 +453,7 @@
   <!-- ==== Misc -->
 
   <target name="clean" description="Clean (build and reports)"
-	  depends="clean-build-area,clean-reports">
+          depends="clean-build-area,clean-reports">
   </target>
 
   <target name="clean-javadoc">
@@ -461,6 +467,7 @@
     <delete dir="${build.classes.dir}"/>
     <delete dir="${artifacts.dir}"/>
     <delete dir="${build.dir}/${jarfile}"/>
+<delete dir="${build.dir}/${jarfile}"/>
   </target>
 
 </project>
