git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119675 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -5,8 +5,8 @@
   
   <!-- The major and minor version numbers  -->
   <property name="version-major"   value="2"/>
-  <property name="version-minor"   value="4"/>
-  <property name="version-status"  value=""/>
+  <property name="version-minor"   value="5"/>
+  <property name="version-status"  value="-dev"/>
   <property name="version"
             value="${version-major}.${version-minor}${version-status}"/>
 
