--- a/ivy.xml
+++ b/ivy.xml
@@ -35,18 +35,24 @@
     <dependency org="org.slf4j" name="slf4j-api" rev="1.4.3"/>
 
     <!-- Additional for development : logging implementation -->
-    <dependency conf="dev->*"  org="org.slf4j" name="slf4j-log4j12" rev="1.4.3">
-      <!-- includes log4j 1.2.13 which is then evicted by the 1.2.15 below -->
+
+    <!-- includes log4j 1.2.13 so depenedency is not necessary-->
+    <dependency conf="dev->*"  org="org.slf4j" name="slf4j-log4j12" rev="1.4.3"/>
+    <dependency conf="dev->*"  org="log4j" name="log4j" rev="1.2.13"> 
+
+    <!-- Log4j 1.2.15 referes to inaccessible modules as excluded below. -->
+    <!-- Alternative.
+    <dependency conf="dev->*"  org="org.slf4j" name="slf4j-log4j12" rev="1.4.3"/>
       <exclude org="log4j" module="log4j"/>
     </dependency>
     
     <dependency conf="dev->*"   org="log4j" name="log4j" rev="1.2.15"> 
-      <!-- Unwanted modules from log4j that are not accessible -->
       <exclude org="com.sun.jmx" module="jmxri"/>
       <exclude org="com.sun.jdmk" module="jmxtools"/>
       <exclude org="javax.jms" module="jms"/>
       <exclude org="javax.mail" module="mail"/>
     </dependency>
   </dependencies>
+  -->
 
 </ivy-module>
