git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119705 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -288,7 +288,7 @@
 
   <!-- Worker task for the above tasks -->
 
-  <target name="run-junit" depends="jar,clean-reports">
+  <target name="run-junit" depends="clean-reports">
     <mkdir dir="${reports.dir}"/>
     <mkdir dir="${reports.dir.xml}"/>
     <mkdir dir="${test.dir}"/>
